tests/org.eclipse.php.core.tests/workspace/errors/php53/unfinishedMethodBody1.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
function foo() { $a }
?>
--EXPECT--
[line=2, start=26, end=27] syntax error, unexpected '}'